# issue-title-ai

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: example.yml  pre-commit.yml  test-workflow.yml  update-version-refs.yml
src/: main.py
src/core/: github_client.py  issue_service.py  llm.py  pre_checks.py  settings.py  verbose.py
style_prompts/: default  offense  order  polite-suggestion  summarization  summary  task-order
styles/: _footer.md  _header.md  offense.md  order.md  summary.md
tests/: common.py  test_github_client.py  test_issue_service.py  test_llm.py  test_main.py  test_pre_checks.py  test_settings.py
